--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/chrome": "^0.1.12",
     "clsx": "^2.1.1",
     "lucide-react": "^0.544.0",
+    "pdfjs-dist": "^5.4.149",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "tailwind-merge": "^3.3.1"
