--- a/src/manifest.json
+++ b/src/manifest.json
@@ -3,6 +3,12 @@
     "name": "Exam Buddy - AI Study Companion",
     "version": "1.0",
     "description": "Turn any webpage or PDF into adaptive quizzes with Chrome's built-in AI",
+    "icons": {
+      "16": "src/assets/icon16.png",
+      "32": "src/assets/icon32.png",
+      "48": "src/assets/icon48.png",
+      "128": "src/assets/icon128.png"
+    },
     "permissions": [
       "sidePanel",
       "storage",
