--- a/src/manifest.json
+++ b/src/manifest.json
@@ -14,7 +14,8 @@
       "storage",
       "activeTab",
       "scripting",
-      "tabs"
+      "tabs",
+      "contextMenus"
     ],
     "host_permissions": [
       "http://*/*",
