--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-apexcharts": "^1.7.0",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
